test/errors/fill2.input.asm

* = $801

    lda #0
!fill -1, 0
